# filament

./: CMakeLists.txt  build.sh
android/samples/lit-cube/: build.gradle
android/samples/lit-cube/app/: build.gradle
android/samples/lit-cube/app/src/main/java/com/google/android/filament/litcube/: MainActivity.kt
filament/src/fg/: FrameGraph.cpp  FrameGraph.h  FrameGraphPassResources.h
filament/test/: filament_framegraph_test.cpp
libs/filamat/: CMakeLists.txt
libs/filamat/java/: CMakeLists.txt  build.gradle  libfilamat-jni.symbols
libs/filamat/java/src/main/cpp/: MaterialBuilder.cpp
libs/filamat/java/src/main/java/com/google/android/filament/filamat/: MaterialBuilder.java  MaterialPackage.java
libs/filamat/src/: GLSLPostProcessor.cpp  GLSLPostProcessor.h  MaterialBuilder.cpp  PostprocessMaterialBuilder.cpp
libs/filamat/src/eiff/: DictionarySpirvChunk.cpp
libs/filamat/src/sca/: ASTHelpers.cpp  ASTHelpers.h  GLSLTools.cpp  GLSLTools.h
shaders/: CMakeLists.txt
tools/glslminifier/src/: GlslMinify.cpp  main.cpp
tools/glslminifier/tests/: test_glslminifier.cpp
